--- a/package.json
+++ b/package.json
@@ -14,14 +14,21 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-sass": "^2.1.1"
+    "gulp-sass": "^2.1.1",
+    "jspm": "^0.16.19"
   },
   "jspm": {
-    "directories": {
-      "baseURL": "app"
+    "dependencies": {
+      "react": "npm:react@^0.14.3",
+      "react-dom": "npm:react-dom@^0.14.3",
+      "redux": "npm:redux@^3.3.1"
     },
     "devDependencies": {
       "typescript": "npm:typescript@^1.6.2"
     }
+  },
+  "dependencies": {
+    "gulp-typescript": "^2.11.0",
+    "lite-server": "^1.3.1"
   }
 }
