--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "jspm": {
     "dependencies": {
+      "material-ui": "npm:material-ui@^0.14.4",
       "react": "npm:react@^0.14.3",
       "react-dom": "npm:react-dom@^0.14.3",
       "redux": "npm:redux@^3.3.1"
